fix filter and fix schedule notifiers